# degen

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
degen/: __init__.py  cli.py  version.py
degen/composer/: composer.py  docker_builder.py  project_builder.py  validator.py
degen/core/: autoload.py  generator.py  interfaces.py  logger.py  phases.py  project_scaffold.py
degen/patterns/: analytics.py  base.py  batch.py  elt.py  medallion.py
degen/registry/: pattern_registry.py  stack_registry.py
degen/stacks/: airflow.py  base.py  dbt.py  duckdb.py  spark.py
degen/tools/: base.py  registry.py
degen/tools/extract/: python.py
degen/tools/store/: duckdb.py  postgres.py
degen/tools/transform/: dbt.py
