[project]
name = "degen"
version = "0.2.0"
description = "Data Engineering Project Generator CLI"
authors = [{ name="Felipe Castro" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "questionary>=2.0.1",
    "rich>=13.7.0"
]

[project.scripts]
degen = "degen.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"